    - COD::CIF::DDL::DDLm:
        - the get_type_source() subroutine.
    - cif_cod_check:
        - the '--check-unquoted-strings' option.
    - cif_molecule:
        - copying '_chemical_name_common', '_chemical_name_systematic' and
          '_chemical_name_mineral' CIF data items from input files to output.
    - dependency installers for Fedora 37 and Fedora 38.
    - COD::Spacegroups::Lookup::COD:
    - three more non-standard space group settings:
        - H-M symbols: 'P 4 21 2 (a-1/4,b+1/4,c)', 'C 2 2 21 (a,b,c+1/4)',
                       'P 21 21 21 (a+1/4,b-1/4,c)'.
        - Hall symbols: 'P 4ab 2ab (x+1/4,y-1/4,z)', 'C 2c 2 (x,y,z-1/4)',
                        'P 2ac 2ab (x-1/4,y+1/4,z)'.
    - cif_estimate_Z:
        - options '--print-header' and '--print-data-block' and their negations.
        - options '--always-continue', '--continue-on-errors', their synonyms
          and negations.
    - the cif_guess_AMCSD_atom_types script.
  * Changed:
    - COD::CIF::DDL::DDLm::Validate:
      - started treating data items with associated dREL code which assigns
        a default value as evaluatable.
    - data/replacement-values/replacement_tags.lst:
      - added several data name replacement rules.
    - data/replacement_values/replacement_values.lst
      - added several replacement rules for the following data items:
        - '_atom_site_adp_type'.
        - '_atom_site_thermal_displace_type'.
        - '_refine_ls_structure_factor_coef'.
    - cif_estimate_Z:
        - the script now estimates the Z value from the formula ratio
          if crystal density or molecular wight is not given.
    - cif_ddlm_dic_check:
        - extended the check that detects incompatible definitions of
          measurand and SU data items to check additional attributes.
        - added a check that detects pairs of looped child-parent categories
          with incompatible category key item sets.