@@ -1,0 +1,16 @@
+#!/bin/sh
+
+sudo apt-get install -y \
+    bison \
+    cmake \
+    gcc \
+    libmodule-scandeps-perl \
+    libnauty2-dev \
+    libparse-yapp-perl \
+    make \
+    perl \
+    python3-dev \
+    python3-setuptools \
+    python-dev-is-python3 \
+    swig \
+;
