@@ -14,6 +14,7 @@ cod-tools (unreleased)
         - copying '_chemical_name_common', '_chemical_name_systematic' and
           '_chemical_name_mineral' CIF data items from input files to output.
     - dependency installers for Fedora 37 and Fedora 38.
+    - dependency installer for Debian 12.
     - COD::Spacegroups::Lookup::COD:
     - three more non-standard space group settings:
         - H-M symbols: 'P 4 21 2 (a-1/4,b+1/4,c)', 'C 2 2 21 (a,b,c+1/4)',
